[package]
name = "stinger-rwlock-watch"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "An RwLock with a tokio::watch channel that is notified when releasing the write lock.  Also, a readOnly lock."

[dependencies]
tokio = { version = "1.41", features = ["sync", "rt", "macros", "time", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.41", features = ["full"] }

[features]
read_only = []
write_request = []